--- a/src/site/resources/css/site.css
+++ b/src/site/resources/css/site.css
@@ -1,6 +1,11 @@
 @import url("http://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700|Questrial|Muli:300,400,300italic,400italic");
 @import "Typography.css";
 
+b
+  {
+    font-weight: 1000;
+  }
+
 body
   {
     font-size: 170%;
@@ -27,6 +32,7 @@ h2 code, h3 code
   {
     font-size: 160%;
   }
+
 
 .container h2
   {
