--- a/src/site/resources/css/site.css
+++ b/src/site/resources/css/site.css
@@ -6,6 +6,16 @@ b
     font-weight: 1000;
   }
 
+p > img
+  {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 60%;
+    margin-top: 4em;
+    margin-bottom: 4em;
+  }
+
 body
   {
     font-size: 170%;
